// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartView pass props correctly 1`] = `
<styled.div>
  <Styled(Card)
    title={
      <styled.div>
        <span>
          Hello, 
          Mary
          !
        </span>
      </styled.div>
    }
  />
</styled.div>
`;

exports[`StartView renders component without crashing 1`] = `
<styled.div>
  <Styled(Card)
    title={<styled.div />}
  />
</styled.div>
`;
